images path change

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
       <div class="logo_container">
         <a href="#"
-          ><img class="myntra_logo" src="../images/image.png" alt="myntra"
+          ><img class="myntra_logo" src="./images/image.png" alt="myntra"
         /></a>
       </div>
       <div class="nav_bar">
@@ -116,13 +116,13 @@
             <a href="#"
               ><img
                 class="playstore"
-                src="../images/goole_playstore_iage.png"
+                src="./images/goole_playstore_iage.png"
                 alt="downloads"
             /></a>
             <a href="#"
               ><img
                 class="playstore"
-                src="../images/appstore.png"
+                src="./images/appstore.png"
                 alt="downloads"
             /></a>
           </div>
