--- a/bag.html
+++ b/bag.html
@@ -20,7 +20,7 @@
   <header>
     <div class="logo_container">
       <a href="#"
-        ><img class="myntra_logo" src="../../images/image.png" alt="myntra"
+        ><img class="myntra_logo" src="./images/image.png" alt="myntra"
       /></a>
     </div>
     <div class="nav_bar">
@@ -114,14 +114,11 @@
           <a href="#"
             ><img
               class="playstore"
-              src="../../images/goole_playstore_iage.png"
+              src="./images/goole_playstore_iage.png"
               alt="downloads"
           /></a>
           <a href="#"
-            ><img
-              class="playstore"
-              src="../../images/appstore.png"
-              alt="downloads"
+            ><img class="playstore" src="./images/appstore.png" alt="downloads"
           /></a>
         </div>
         <p id="keep_TOUCH_TAG">KEEP IN TOUCH</p>
